# fork_purl-spec

./: .gitignore  =8  Makefile
.github/workflows/: abnf-test.yml  grammar-tests-java-abnf4j.yml  grammar-tests-java-apg-java.yml  test-grammar-abnf-cpp.yml  test-grammar-abnf-java.yml  test-grammar-abnf-javascript-apg.yml  test-grammar-abnf.yml  tests-grammar-abnf-csharp-abnf-net.yml  tests-grammar-abnf-go.yml  tests-grammar-abnf-rust-static-regular-grammar.yml
docs/standard/: grammar.md
etc/scripts/grammar-based-parser/: grammar_based_parser.py  requriements.txt
tests/grammar/: README.md  conftest.py  requirements.txt  test_purl_grammar.py
tests/grammar-ABNF/cpp/abnf-cpp/: CMakeLists.txt  README.md
tests/grammar-ABNF/cpp/abnf-cpp/src/: main.cpp
tests/grammar-ABNF/csharp/abnf.net/: README.md
tests/grammar-ABNF/csharp/abnf.net/PurlGrammarTests/: .gitignore  GrammarLoader.cs  GrammarValidationTests.cs  PurlGrammarTests.csproj  RepoRoot.cs
tests/grammar-ABNF/go/go-abnf/: README.md  go.mod  go.sum  grammar_test.go
tests/grammar-ABNF/java/abnf-parser/: README.md  pom.xml
tests/grammar-ABNF/java/abnf-parser/src/test/java/io/github/purlspec/grammar/: AbnfGrammar.java  AbnfGrammarTest.java
tests/grammar-ABNF/java/abnf4j/: README.md  pom.xml
tests/grammar-ABNF/java/abnf4j/src/test/java/io/github/jkowalleck/purl/grammar/: GrammarValidationTest.java
tests/grammar-ABNF/javascript/apg/: README.md  package-lock.json  package.json  test-purl-grammar.js
tests/grammar-ABNF/python/: README.md  requirements.txt  test_grammar.py
tests/grammar/java/apg-java/: README.md  pom.xml
tests/grammar/java/apg-java/src/test/java/org/purl/grammar/: GrammarValidationTest.java
tests/grammar/rust/static_regular_grammar/: Cargo.toml  README.md  build.rs
tests/grammar/rust/static_regular_grammar/src/: lib.rs
tests/grammar/rust/static_regular_grammar/tests/: grammar.rs
